--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -31,16 +31,35 @@
    "source": [
     "## task 1a)\n",
     "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
+    "$$\n",
+    "\\frac{\\partial C^n}{\\partial w_i} =  - \\frac{\\partial}{\\partial w_i}(y^n \\ln(\\hat y^n) + (1 - y^n)\\ln(1-\\hat y^n)) = - y^n \\frac{\\partial}{\\partial w_i} (\\ln(\\hat y^n)) - (1 - y^n) \\frac{\\partial}{\\partial w_i}(\\ln(1-\\hat y^n)))\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= - (\\frac{y^n}{\\hat y^n} - \\frac{1-y^n}{1-\\hat y^n})\\frac{\\partial \\hat y^n}{\\partial w_i} = - \\left(\\frac{y^n - \\hat y^n}{\\hat y^n (1- \\hat y^n)}\\right) \\frac{\\partial \\hat y^n}{\\partial w_i}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial}{\\partial z} \\frac{1}{1 + e^z} = -(1 + e^z)^{-2} e^z\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\hat y^n}{\\partial w_i} = \\frac{\\partial}{\\partial w_i} \\frac{1}{1 + e^{-w^T x}} = -(1 + e^{-w^T x})^{-2} e^{-w^T x} \\frac{\\partial}{\\partial w_i} (-w^T x) = - (\\hat y^n)^2 (\\frac{1}{\\hat y^n} - 1) (-x_i) = \\hat y^n (1 - \\hat y^n)x_i\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial C^n}{\\partial w_i} = - \\left(\\frac{y^n - \\hat y^n}{\\hat y^n (1- \\hat y^n)}\\right) \\frac{\\partial \\hat y^n}{\\partial w_i} = - \\left(\\frac{y^n - \\hat y^n}{\\hat y^n (1- \\hat y^n)}\\right) \\hat y^n (1 - \\hat y^n)x_i = - (y^n - \\hat y^n) x_i\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## task 1a)\n",
-    "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
+    "## task 1b)\n",
+    "$$\n",
+    "\\frac{\\partial C^n}{\\partial w_{kj}} =  -\\frac{\\partial}{\\partial w_{kj}} \\sum_{k=1}^K y^n_k \\ln(\\hat y^n_k) = - \\sum_{k=1}^K \\frac{y^n_k}{\\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial w_{kj}} = - \\sum_{k=1}^K \\frac{y^n_k}{\\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}}\n",
+    "$$\n"
    ]
   },
   {
