--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -58,7 +58,27 @@
    "source": [
     "## task 1b)\n",
     "$$\n",
-    "\\frac{\\partial C^n}{\\partial w_{kj}} =  -\\frac{\\partial}{\\partial w_{kj}} \\sum_{k=1}^K y^n_k \\ln(\\hat y^n_k) = - \\sum_{k=1}^K \\frac{y^n_k}{\\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial w_{kj}} = - \\sum_{k=1}^K \\frac{y^n_k}{\\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}}\n",
+    "\\frac{\\partial C^n}{\\partial w_{kj}} =  -\\frac{\\partial}{\\partial w_{kj}} \\sum_{i=1}^K y^n_i \\ln(\\hat y^n_i) = - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} \\frac{\\partial \\hat y^n_i}{\\partial w_{kj}} = - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} \\frac{\\partial \\hat y^n_i}{\\partial \\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\hat y^n_i}{\\partial \\hat y^n_k} = \\begin{cases} 1, i=k \\\\ 0, \\text{otherwise}\\end{cases} \\implies - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} \\frac{\\partial \\hat y^n_i}{\\partial \\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}} = -  \\frac{y^n_k}{\\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial \\hat y^n_k}{\\partial z_k} = \\frac{\\partial}{\\partial z_k} \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}} =  \\frac{1}{\\sum_{k'=1}^K e^{z_{k'}}} \\frac{\\partial}{\\partial z_k} (e^{z_k})  +  e^{z_k} \\frac{\\partial}{\\partial z_k}\\left(\\sum_{k'=1}^K e^{z_{k'}}\\right)^{-1}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "=  \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}}  +  e^{z_k} (-1) \\left(\\sum_{k'=1}^K e^{z_{k'}}\\right)^{-2} e^{z_k} = \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}} \\left(1 - \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}} \\right) = \\hat y^n_k(1-\\hat y^n_k)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    " \\frac{\\partial z_k}{\\partial w_{kj}} = x_j\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial C^n}{\\partial w_{kj}} =  -  \\frac{y^n_k}{\\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}} =  -  \\frac{y^n_k}{\\hat y^n_k} \\hat y^n_k(1-\\hat y^n_k) x_j = - y^n_k(1-\\hat y^n_k) x_j\n",
     "$$\n"
    ]
   },
