--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -58,19 +58,20 @@
    "source": [
     "## task 1b)\n",
     "$$\n",
-    "\\frac{\\partial C^n}{\\partial w_{kj}} =  -\\frac{\\partial}{\\partial w_{kj}} \\sum_{i=1}^K y^n_i \\ln(\\hat y^n_i) = - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} \\frac{\\partial \\hat y^n_i}{\\partial w_{kj}} = - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} \\frac{\\partial \\hat y^n_i}{\\partial \\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}}\n",
+    "\\frac{\\partial C^n}{\\partial w_{kj}} =  -\\frac{\\partial}{\\partial w_{kj}} \\sum_{i=1}^K y^n_i \\ln(\\hat y^n_i) = - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} \\frac{\\partial \\hat y^n_i}{\\partial w_{kj}} = - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} \\frac{\\partial \\hat y^n_i}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial \\hat y^n_i}{\\partial \\hat y^n_k} = \\begin{cases} 1, i=k \\\\ 0, \\text{otherwise}\\end{cases} \\implies - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} \\frac{\\partial \\hat y^n_i}{\\partial \\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}} = -  \\frac{y^n_k}{\\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}}\n",
+    "\\frac{\\partial \\hat y^n_i}{\\partial z_k} (\\text{ for } i \\neq k) = \\frac{\\partial}{\\partial z_k} \\frac{e^{z_i}}{ e^{z_{k}} + \\sum_{k'\\neq k} e^{z_{k'}}} = e^{z_i} (-1) \\left(\\sum_{k'=1} e^{z_{k'}} \\right)^{-2} e^{z_k} = -\\hat y^n_i \\hat y^n_k\n",
     "$$\n",
     "\n",
     "$$\n",
     "\\frac{\\partial \\hat y^n_k}{\\partial z_k} = \\frac{\\partial}{\\partial z_k} \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}} =  \\frac{1}{\\sum_{k'=1}^K e^{z_{k'}}} \\frac{\\partial}{\\partial z_k} (e^{z_k})  +  e^{z_k} \\frac{\\partial}{\\partial z_k}\\left(\\sum_{k'=1}^K e^{z_{k'}}\\right)^{-1}\n",
     "$$\n",
     "\n",
+    "\n",
     "$$\n",
-    "=  \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}}  +  e^{z_k} (-1) \\left(\\sum_{k'=1}^K e^{z_{k'}}\\right)^{-2} e^{z_k} = \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}} \\left(1 - \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}} \\right) = \\hat y^n_k(1-\\hat y^n_k)\n",
+    "=  \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}}  +  e^{z_k} (-1) \\left(\\sum_{k'=1}^K e^{z_{k'}}\\right)^{-2} e^{z_k} = \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}} \\left(1 - \\frac{e^{z_k}}{\\sum_{k'=1}^K e^{z_{k'}}} \\right) = \\hat y^n_k(1-\\hat y^n_k) = \\hat y^n_k - \\hat y^n_k \\hat y^n_k\n",
     "$$\n",
     "\n",
     "$$\n",
@@ -78,7 +79,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial C^n}{\\partial w_{kj}} =  -  \\frac{y^n_k}{\\hat y^n_k} \\frac{\\partial \\hat y^n_k}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}} =  -  \\frac{y^n_k}{\\hat y^n_k} \\hat y^n_k(1-\\hat y^n_k) x_j = - y^n_k(1-\\hat y^n_k) x_j\n",
+    "\\frac{\\partial C^n}{\\partial w_{kj}} = - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} \\frac{\\partial \\hat y^n_i}{\\partial z_k} \\frac{\\partial z_k}{\\partial w_{kj}} = -\\frac{y^n_k}{\\hat y^n_k} \\hat  y^n_k  x_j - \\sum_{i=1}^K \\frac{y^n_i}{\\hat y^n_i} (-\\hat y^n_i \\hat y^n_k) x_j = x_j \\left( - y^n_k + \\hat y^n_k \\sum_{i=1}^K y^n_i \\right) = -x_j (y^n_k - \\hat y^n_k)\n",
     "$$\n"
    ]
   },
