--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -168,7 +168,9 @@
     "## Task 4a)\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial J(w)}{\\partial w} = \\frac{\\partial}{\\partial w} (C(w) + \\lambda R(w)) = \\frac{\\partial C}{\\partial w} + \\lambda \\frac{\\partial R}{\\partial w} =-x_j (y^n_k - \\hat y^n_k) + \\frac{\\lambda}{2} \\cdot \\Sigma_{i,j} \\frac{\\partial}{\\partial w} w_{i,j}^2 = -x_j (y^n_k - \\hat y^n_k) + \\lambda \\cdot \\Sigma_{i,j} w_{i,j}\n",
+    "\\frac{\\partial J(w)}{\\partial w} = \\frac{\\partial}{\\partial w} (C(w) + \\lambda R(w)) = \\frac{\\partial C}{\\partial w} + \\lambda \\frac{\\partial R}{\\partial w} \n",
+    "$$\n",
+    "$$=-x_j (y^n_k - \\hat y^n_k) + \\frac{\\lambda}{2} \\cdot \\Sigma_{i,j} \\frac{\\partial}{\\partial w} w_{i,j}^2 = -x_j (y^n_k - \\hat y^n_k) + \\lambda \\cdot \\Sigma_{i,j} w_{i,j}\n",
     "$$"
    ]
   },
