--- a/assignment1/AssignmentReport-Group127.ipynb
+++ b/assignment1/AssignmentReport-Group127.ipynb
@@ -94,8 +94,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The first tasks were done by using data that was sampled stochastically using the given code on github. This caused less pikes in the validation accuracy. However the stochastic sampling was turned off in task 2e to get some spikes to compare shuffling vs not shuffling.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Task 2b)\n",
-    "![](../task2b_binary_train_loss.png)"
+    "![](task2b_binary_train_loss.png)"
    ]
   },
   {
@@ -103,7 +110,7 @@
    "metadata": {},
    "source": [
     "## Task 2c)\n",
-    "![](../task2b_binary_train_accuracy.png)"
+    "![](task2b_binary_train_accuracy.png)"
    ]
   },
   {
@@ -111,7 +118,11 @@
    "metadata": {},
    "source": [
     "## Task 2d)\n",
-    "FILL IN ANSWER"
+    "It stops after around 550 steps which is in the 19th epoch.\n",
+    "\n",
+    "\n",
+    "![](task2d_binary_train_loss.png)\n",
+    "![](task2d_binary_train_accuracy.png)\n"
    ]
   },
   {
@@ -119,8 +130,8 @@
    "metadata": {},
    "source": [
     "## Task 2e)\n",
-    "FILL IN ANSWER\n",
-    "![](../task2e_train_accuracy_shuffle_difference.png)"
+    "When shuffling the training set one calculates the gradient on different parts of the data set each epoch making it a better representation of a real situation which again makes it better at the validation set.  \n",
+    "![](task2e_train_accuracy_shuffle_difference.png)"
    ]
   },
   {
@@ -135,7 +146,7 @@
    "metadata": {},
    "source": [
     "## Task 3b)\n",
-    "![Softmax training loss variance](../task3b_softmax_train_loss.png)"
+    "![Softmax training loss variance](task3b_softmax_train_loss.png)"
    ]
   },
   {
@@ -143,7 +154,7 @@
    "metadata": {},
    "source": [
     "## Task 3c)\n",
-    "![Softmax training accuracy](../task3b_softmax_train_accuracy.png)"
+    "![Softmax training accuracy](task3b_softmax_train_accuracy.png)"
    ]
   },
   {
@@ -179,9 +190,8 @@
    "metadata": {},
    "source": [
     "## Task 4b)\n",
-    "FILL IN ANSWER\n",
-    "\n",
-    "![](task4b_softmax_weight.png)"
+    "When using regularization ($\\lambda=2$) the algorithm tries to keep the weights small while making good guesses. It will then prioritize to use the weights to extract the most important features of the image. E.g the weights for recognizing a 1 with regularization just recognizes  straight line i the middle, while the weights without regularization seems to try to recognize line with multiple gradients.  \n",
+    "![j](task4b_softmax_weight.png)"
    ]
   },
   {
@@ -189,7 +199,6 @@
    "metadata": {},
    "source": [
     "## Task 4c)\n",
-    "FILL IN ANSWER\n",
     "\n",
     "![](task4c_l2_reg_accuracy.png)"
    ]
@@ -199,7 +208,8 @@
    "metadata": {},
    "source": [
     "## Task 4d)\n",
-    "![](task4d_l2_reg_norms.png)"
+    "\n",
+    "With regularization the error have to be sufficiently large so that the regularization part of the gradient does not dominate so that the weights can be changed in the direction of better training accuracy. At some point the weights will become sufficiently large so that the gradient becomes very small while there still is errors to correct. This effect stops it from achieving better training accuracy which indirectly affect the validation accuracy.   "
    ]
   },
   {
@@ -207,7 +217,8 @@
    "metadata": {},
    "source": [
     "## Task 4e)\n",
-    "FILL IN ANSWER"
+    "The L2-norm of the weights drastically decrease with increasing $\\lambda$.  \n",
+    "![](task4d_l2_reg_norms.png)"
    ]
   }
  ],
